2004-01-17  Wakaba  <wakaba@suika.fam.cx>

	* util-formatter-boolean.t: New test.

2003-12-25  Wakaba  <wakaba@suika.fam.cx>

	* util-error.t: Output message verbosely if $^W.

2003-12-14  Wakaba  <wakaba@suika.fam.cx>

	* markup-xml-parser.t: New test.

2003-12-13  Wakaba  <wakaba@suika.fam.cx>

	* util-error-textparser.t: Rewritten.

2003-12-06  Wakaba  <wakaba@suika.fam.cx>

	* markup-xml-qname.t: "" -> DEFAULT_PFX.

	* util-formatter-node.t, util-formatter-text.t, util-error.t: Changed to new syntax.

2003-12-05  Wakaba  <wakaba@suika.fam.cx>

	* markup-xml-nodetree.t: New test for construct_xml_node ().

2003-11-22  Wakaba  <wakaba@suika.fam.cx>

	* util-formatter-node.t, util-formatter-text.t: New test for boolean attribute.

2003-11-16  Wakaba  <wakaba@suika.fam.cx>

	* util-formatter-node.t: New test.

	* mime-eword.t: Don't test with Japanese string if Japanese encoder/decoder not found.

2003-11-15  Wakaba  <wakaba@suika.fam.cx>

	* util-formatter-text.t: New test.

	* util-error.t: New test.

	* markup-xml--ns.t: Tests Message::Markup::XML::Node (instead of Message::Markup::XML).

	* util-formatter-base.t: New subtest for flag support.

	* markup-swcfg20-node.t: New test (Moved from SuikaWiki).

	* markup-swcfg20-parser.t: New test (Moved from SuikaWiki).

2003-11-13  Wakaba  <wakaba@suika.fam.cx>

	* util-formatter-base.t: New test.

2003-11-09  Wakaba  <wakaba@suika.fam.cx>

	* markup-xml-node.t: New test for 'xml:' special prefix.

2003-11-01  Wakaba  <wakaba@suika.fam.cx>

	* markup-xml-node.t: New test.

	* markup-xml-qname.t (gen_pfx): Added one-char prefix test.

2003-09-17  Wakaba  <wakaba@suika.fam.cx>

	* markup-xml-validator-model.t: New file.

	* util-hostpermit.t: New test.

2003-08-05  Wakaba  <wakaba@suika.fam.cx>

	* error.pl: Removed.
	* util-error-textparser.t: New script.
	* test.pl: Removed.

2003-08-05  Wakaba  <wakaba@suika.fam.cx>

	* error.pl: New script.
	* test.pl: New script.
	* ChangeLog: New file.
