@@ -1,3 +1,8 @@
+2004-02-22  Wakaba  <wakaba@suika.fam.cx>
+
+	* markup-xml-qname.t: Don't load obsolete XML module.
+	* markup-xml-qname.t: Some new tests for EMPTY_PFX added.
+
 2004-01-17  Wakaba  <wakaba@suika.fam.cx>
 
 	* util-formatter-boolean.t: New test.
